--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -3,8 +3,7 @@ version: '3.8'
 services:
   app:
     container_name: delemangi-home
-    image: delemangi-home
-    build: .
+    image: delemangi/delemangi-home
     restart: unless-stopped
     ports:
       - 8088:8088
