--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx",
-    "preview": "vite preview --host"
+    "preview": "vite preview --host",
+    "prepare": "husky"
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.5",
@@ -27,6 +28,7 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.57.0",
     "eslint-config-canonical": "^42.8.1",
+    "husky": "^9.0.11",
     "typescript": "^5.4.3",
     "vite": "^5.2.7"
   }
