Cache all responses

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,5 +7,9 @@ server {
     root /usr/share/nginx/html;
     index index.html;
     try_files $uri $uri/ /index.html;
+    location ~* \.(css|js)$ {
+      expires 1d;
+      add_header Cache-Control "public";
+    }
   }
 }
