--- a/nginx.conf
+++ b/nginx.conf
@@ -3,12 +3,18 @@ server {
 
   server_name localhost;
 
+  gzip on;
+  gzip_static on;
+  gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+  gunzip on;
+
   location / {
     root /usr/share/nginx/html;
     index index.html;
     try_files $uri $uri/ /index.html;
-    location ~* \.(css|js)$ {
-      expires 1d;
+
+    location ~* \.(html|css|js)$ {
+      expires 30d;
       add_header Cache-Control "public";
     }
   }
