--- a/package.json
+++ b/package.json
@@ -11,14 +11,11 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.3.6",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.73",
