--- a/nginx.conf
+++ b/nginx.conf
@@ -14,8 +14,7 @@ server {
     try_files $uri $uri/ /index.html;
 
     location ~* \.(html|css|js)$ {
-      expires 30d;
-      add_header Cache-Control "public";
+      add_header Cache-Control "max-age=31536000";
     }
   }
 }
