--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ server {
     index index.html;
     try_files $uri $uri/ /index.html;
 
-    location ~* \.(html|css|js)$ {
+    location ~* \.(html|css|js|svg)$ {
       add_header Cache-Control "max-age=31536000";
     }
   }
