--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,9 +1,9 @@
-version: '3.8'
+name: delemangi-home
 
 services:
   app:
     container_name: delemangi-home
-    image: delemangi/delemangi-home
+    image: delemangi/delemangi-home:latest
     restart: unless-stopped
     ports:
       - 8088:8088
