--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.22.0",
-    "eslint-config-canonical": "^44.3.43",
+    "eslint-config-imperium": "^2.0.0",
     "husky": "^9.1.7",
     "typescript": "^5.8.2",
     "vite": "^6.2.1"
