Update project name

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,4 +55,4 @@ jobs:
         with:
           push: true
           platforms: linux/amd64,linux/arm64
-          tags: ghcr.io/delemangi/delemangi.com:${{ github.ref == 'refs/heads/main' && 'latest' || 'dev' }}
+          tags: ghcr.io/delemangi/homepage:${{ github.ref == 'refs/heads/main' && 'latest' || 'dev' }}
