Allow pushing packages

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,6 +36,10 @@ jobs:
     needs:
       - eslint
 
+    permissions:
+      contents: read
+      packages: write
+
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
